SERVER-26077 Tighten checks around migration session id

Transmits the migration session id together with the abort command and
ensures that the migration session id reported in the status matches that
of the cloner.