src/mongo/db/s/migration_destination_manager_legacy_commands.cpp
@@ -93,12 +93,6 @@ public:
              BSONObjBuilder& result) {
         ShardingState* const shardingState = ShardingState::get(txn);
 
-        // Active state of TO-side migrations (MigrateStatus) is serialized by distributed
-        // collection lock.
-        uassert(ErrorCodes::ConflictingOperationInProgress,
-                "Shard is already serving as a destination for migration",
-                !shardingState->migrationDestinationManager()->isActive());
-
         // Pending deletes (for migrations) are serialized by the distributed collection lock,
         // we are sure we registered a delete for a range *before* we can migrate-in a
         // subrange.
@@ -314,9 +308,22 @@ public:
              int,
              string& errmsg,
              BSONObjBuilder& result) {
-        ShardingState::get(txn)->migrationDestinationManager()->abort();
-        ShardingState::get(txn)->migrationDestinationManager()->report(result);
-        return true;
+        auto const mdm = ShardingState::get(txn)->migrationDestinationManager();
+
+        auto migrationSessionIdStatus(MigrationSessionId::extractFromBSON(cmdObj));
+
+        if (migrationSessionIdStatus.isOK()) {
+            const bool ok = mdm->abort(migrationSessionIdStatus.getValue());
+            mdm->report(result);
+            return ok;
+        } else if (migrationSessionIdStatus == ErrorCodes::NoSuchKey) {
+            mdm->abortWithoutSessionIdCheck();
+            mdm->report(result);
+            return true;
+        }
+
+        uassertStatusOK(migrationSessionIdStatus.getStatus());
+        MONGO_UNREACHABLE;
     }
 
 } recvChunkAbortCommand;
