src/mongo/db/s/migration_session_id_test.cpp
@@ -54,23 +54,23 @@ TEST(MigrationSessionId, GenerateAndExtract) {
 }
 
 TEST(MigrationSessionId, Comparison) {
-    MigrationSessionId emptySessionId =
-        assertGet(MigrationSessionId::extractFromBSON(BSON("SomeField" << 1)));
-    MigrationSessionId nonEmptySessionId =
+    MigrationSessionId sessionId =
         assertGet(MigrationSessionId::extractFromBSON(BSON("SomeField" << 1 << "sessionId"
                                                                        << "TestSessionID")));
-
-    ASSERT(!emptySessionId.matches(nonEmptySessionId));
-    ASSERT(!nonEmptySessionId.matches(emptySessionId));
 
     MigrationSessionId sessionIdToCompare =
         assertGet(MigrationSessionId::extractFromBSON(BSON("SomeOtherField" << 1 << "sessionId"
                                                                             << "TestSessionID")));
-    ASSERT(nonEmptySessionId.matches(sessionIdToCompare));
-    ASSERT(sessionIdToCompare.matches(nonEmptySessionId));
+    ASSERT(sessionId.matches(sessionIdToCompare));
+    ASSERT(sessionIdToCompare.matches(sessionId));
 }
 
-TEST(MigrationSessionId, ErrorWhenTypeIsNotString) {
+TEST(MigrationSessionId, ErrorNoSuchKeyWhenSessionIdIsMissing) {
+    ASSERT_EQ(ErrorCodes::NoSuchKey,
+              MigrationSessionId::extractFromBSON(BSON("SomeField" << 1)).getStatus().code());
+}
+
+TEST(MigrationSessionId, ErrorWhenSessionIdTypeIsNotString) {
     ASSERT_NOT_OK(
         MigrationSessionId::extractFromBSON(BSON("SomeField" << 1 << "sessionId" << Date_t::now()))
             .getStatus());
